Fixed #52 and too long Appointment names

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,6 +215,8 @@ html {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .zc-event-left{
